# pfp-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: audit.yml  ci.yml  mark-stale.yaml  semgrep.yml
pfp-headers/: Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
pfp-headers/include/: cf_ebpf_defs.h  cf_ebpf_helper.h
pfp-headers/src/: lib.rs
pfp-verifier/: Cargo.toml  README.md  RELEASE_NOTES.md
pfp-verifier/src/: config.rs  context_descriptors.rs  helpers.rs  lib.rs  platform.rs
