# Copyright (c) 2024 Cloudflare, Inc.
# Licensed under the Apache 2.0 license found in the LICENSE file or at:
#     https://opensource.org/licenses/Apache-2.0

[workspace]
resolver = "3"
members = [
    "pfp-headers",
    'pfp-verifier',
]

[workspace.package]
version = "0.5.0"
publish = false
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/cloudflare/pfp-tools"

[workspace.dependencies]
pfp-headers = { path = "pfp-headers", version = "0.5.0" }
pfp-verifier = { path = "pfp-verifier",  version = "0.5.0", default-features = false }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
debug = 1
lto = 'thin'
codegen-units = 1
