# Copyright (c) 2024 Cloudflare, Inc.
# Licensed under the Apache 2.0 license found in the LICENSE file or at:
#     https://opensource.org/licenses/Apache-2.0

[package]
name = "pfp-verifier"
description = "Verifier used to check the validity & safety of Programmable Flow Protection programs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-name ="{{version}}"
pre-release-hook = [
    "git-cliff",
    "-o", "RELEASE_NOTES.md",
    "--tag", "{{version}}"
]

[[bin]]
path = "bin/verifier.rs"
name = "pfp-verifier"
required-features = ["clap"]

[dependencies]
clap = { version = "4.6.0", optional = true } # MIT OR Apache-2.0, just for the binary, ignore for lib.
prevail = "=0.2.4" # MIT
pfp-headers.workspace = true
thiserror = "2.0.18" # MIT OR Apache-2.0
tempfile = { version = "3.27.0", optional = true } # MIT OR Apache-2.0
open = { version = "5.3.3", optional = true } # MIT

[features]
default = ["clap"]
visualize-cfg = ["dep:tempfile", "dep:open"]
clap = ["dep:clap"]
